--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-store": "^0.0.0",
+    "store": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
